--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "node src/build.js",
-    "start": "node src/index.js"
+    "start": "cd src && node index"
   },
   "repository": {
     "type": "git",
